gallery border spacing issue

--- a/styles/main.css
+++ b/styles/main.css
@@ -591,13 +591,13 @@ p {
 }
 .section-exercises .gallery-box-shadow {
   position: absolute;
-  bottom: 2rem;
+  bottom: 1.5rem;
   left: 0;
   width: 100%;
   height: 20%;
   -webkit-box-shadow: inset 0px -3rem 3rem black;
           box-shadow: inset 0px -3rem 3rem black;
-  border-bottom: 0.3rem solid #ffd600;
+  border-bottom: 0.5rem solid #ffd600;
 }
 
 .section-join-us {
