--- a/styles/sass/layouts/_exercises.scss
+++ b/styles/sass/layouts/_exercises.scss
@@ -36,12 +36,12 @@
 
             &-box-shadow {
                 position: absolute;
-                bottom: 2rem;
+                bottom: 1.5rem;
                 left: 0;
                 width: 100%;
                 height: 20%;
                 box-shadow: inset 0px -3rem 3rem black;
-                border-bottom: 0.3rem solid $color-secondary;
+                border-bottom: 0.5rem solid $color-secondary;
             }
         }
     }
